--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,8 +9,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "myDBContext": "Data Source=178.18.201.44,1533;Initial Catalog=FunAndSaveTest; User Id=sa_kaan;Password=Txp4L&QbCb;"
-    //"myDBContext": "Data Source=94.73.151.69;Initial Catalog=u6907928_coupon; User Id=u6907928_coupon;Password=ic80-@6_aC.7DqKG"
+    "myDBContext": "Data Source=localhost;Initial Catalog=couponDB; User Id=user;Password=pass;"
+   
   },
 
   "AppSettings": {
